--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -708,7 +708,7 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                                 <div class="stat-label">Shared Game</div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-value" style="white-space: nowrap;">${data.conversion_rate}%&nbsp;→&nbsp;${data.start_rate}%&nbsp;→&nbsp;${data.finish_rate}%&nbsp;→&nbsp;${data.share_rate}%</div>
+                                <div class="stat-value">${data.conversion_rate}% <span style="white-space:nowrap;">→&nbsp;${data.start_rate}%</span> <span style="white-space:nowrap;">→&nbsp;${data.finish_rate}%</span> <span style="white-space:nowrap;">→&nbsp;${data.share_rate}%</span></div>
                                 <div class="stat-label">Play / Start / Finish / Share Rate</div>
                             </div>
                         </div>
