--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -696,10 +696,6 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                                 <div class="stat-label">Total Visits</div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-value">${data.total_played}</div>
-                                <div class="stat-label">Clicked Play</div>
-                            </div>
-                            <div class="stat-card">
                                 <div class="stat-value">${data.total_started}</div>
                                 <div class="stat-label">Started Game</div>
                             </div>
@@ -712,8 +708,8 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                                 <div class="stat-label">Shared Game</div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-value">${data.conversion_rate}% <span style="white-space:nowrap;">→&nbsp;${data.start_rate}%</span> <span style="white-space:nowrap;">→&nbsp;${data.finish_rate}%</span> <span style="white-space:nowrap;">→&nbsp;${data.share_rate}%</span></div>
-                                <div class="stat-label">Play / Start / Finish / Share Rate</div>
+                                <div class="stat-value">${data.start_rate}% <span style="white-space:nowrap;">→&nbsp;${data.finish_rate}%</span> <span style="white-space:nowrap;">→&nbsp;${data.share_rate}%</span></div>
+                                <div class="stat-label">Start / Finish / Share Rate</div>
                             </div>
                         </div>
                     `;
@@ -727,7 +723,6 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                         chartHtml += '<div style="font-family: monospace; font-size: 12px;">';
                         data.daily_visits.forEach(d => {
                             const visitBar = Math.round(d.visits * barWidth);
-                            const playedBar = Math.round(d.played * barWidth);
                             const startedBar = Math.round(d.started * barWidth);
                             const finishedBar = Math.round(d.finished * barWidth);
                             const date = d.day.substring(5); // MM-DD
@@ -735,16 +730,15 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                                 <span style="width: 50px; color: var(--text-dim);">${date}</span>
                                 <div style="flex: 1; position: relative; height: 16px; background: rgba(255,255,255,0.05);">
                                     <div style="position: absolute; height: 100%; width: ${visitBar}%; background: rgba(0,150,255,0.4);"></div>
-                                    <div style="position: absolute; height: 100%; width: ${playedBar}%; background: rgba(0,255,100,0.4);"></div>
                                     <div style="position: absolute; height: 100%; width: ${startedBar}%; background: rgba(255,200,0,0.5);"></div>
                                     <div style="position: absolute; height: 100%; width: ${finishedBar}%; background: rgba(255,80,80,0.6);"></div>
                                     <div style="position: absolute; height: 100%; width: ${Math.round((d.shared || 0) * barWidth)}%; background: rgba(180,80,255,0.6);"></div>
                                 </div>
-                                <span style="width: 140px; text-align: right; color: var(--text-dim);">${d.visits}/${d.played}/${d.started}/${d.finished}/${d.shared || 0}</span>
+                                <span style="width: 140px; text-align: right; color: var(--text-dim);">${d.visits}/${d.started}/${d.finished}/${d.shared || 0}</span>
                             </div>`;
                         });
                         chartHtml += '</div>';
-                        chartHtml += '<div style="margin-top: 5px; font-size: 11px; color: var(--text-dim);"><span style="color: rgba(0,150,255,0.7);">■</span> Visits &nbsp; <span style="color: rgba(0,255,100,0.7);">■</span> Played &nbsp; <span style="color: rgba(255,200,0,0.8);">■</span> Started &nbsp; <span style="color: rgba(255,80,80,0.8);">■</span> Finished &nbsp; <span style="color: rgba(180,80,255,0.8);">■</span> Shared</div>';
+                        chartHtml += '<div style="margin-top: 5px; font-size: 11px; color: var(--text-dim);"><span style="color: rgba(0,150,255,0.7);">■</span> Visits &nbsp; <span style="color: rgba(255,200,0,0.8);">■</span> Started &nbsp; <span style="color: rgba(255,80,80,0.8);">■</span> Finished &nbsp; <span style="color: rgba(180,80,255,0.8);">■</span> Shared</div>';
                         document.getElementById('visitChart').innerHTML = chartHtml;
                     }
                     
@@ -752,12 +746,12 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                     if (data.top_referrers && data.top_referrers.length > 0) {
                         let refHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Top Referrers</h3>';
                         refHtml += '<table style="width: 100%; border-collapse: collapse;">';
-                        refHtml += '<tr style="border-bottom: 1px solid var(--primary);"><th style="text-align: left; padding: 5px;">Referrer</th><th style="text-align: right; padding: 5px;">Visits</th><th style="text-align: right; padding: 5px;">Played</th><th style="text-align: right; padding: 5px;">Started</th><th style="text-align: right; padding: 5px;">Finished</th><th style="text-align: right; padding: 5px;">Conv%</th></tr>';
+                        refHtml += '<tr style="border-bottom: 1px solid var(--primary);"><th style="text-align: left; padding: 5px;">Referrer</th><th style="text-align: right; padding: 5px;">Visits</th><th style="text-align: right; padding: 5px;">Started</th><th style="text-align: right; padding: 5px;">Finished</th><th style="text-align: right; padding: 5px;">Conv%</th></tr>';
                         data.top_referrers.forEach(r => {
                             const conv = r.visits > 0 ? (r.finished / r.visits * 100).toFixed(1) : '0.0';
                             // Truncate long referrers
                             const shortRef = r.referrer.length > 60 ? r.referrer.substring(0, 60) + '...' : r.referrer;
-                            refHtml += `<tr style="border-bottom: 1px solid rgba(255,255,255,0.1);"><td style="padding: 5px; color: var(--text-dim); word-break: break-all;">${escapeHtml(shortRef)}</td><td style="text-align: right; padding: 5px;">${r.visits}</td><td style="text-align: right; padding: 5px;">${r.played}</td><td style="text-align: right; padding: 5px;">${r.started}</td><td style="text-align: right; padding: 5px;">${r.finished}</td><td style="text-align: right; padding: 5px;">${conv}%</td></tr>`;
+                            refHtml += `<tr style="border-bottom: 1px solid rgba(255,255,255,0.1);"><td style="padding: 5px; color: var(--text-dim); word-break: break-all;">${escapeHtml(shortRef)}</td><td style="text-align: right; padding: 5px;">${r.visits}</td><td style="text-align: right; padding: 5px;">${r.started}</td><td style="text-align: right; padding: 5px;">${r.finished}</td><td style="text-align: right; padding: 5px;">${conv}%</td></tr>`;
                         });
                         refHtml += '</table>';
                         document.getElementById('visitReferrers').innerHTML = refHtml;
@@ -767,10 +761,10 @@ ${bug.debug_log ? escapeHtml(bug.debug_log) : '<em>No debug log</em>'}
                     if (data.top_languages && data.top_languages.length > 0) {
                         let langHtml = '<h3 style="margin-bottom: 10px; color: var(--primary);">> Top Languages</h3>';
                         langHtml += '<table style="width: 100%; border-collapse: collapse;">';
-                        langHtml += '<tr style="border-bottom: 1px solid var(--primary);"><th style="text-align: left; padding: 5px;">Language</th><th style="text-align: right; padding: 5px;">Visits</th><th style="text-align: right; padding: 5px;">Played</th><th style="text-align: right; padding: 5px;">Started</th><th style="text-align: right; padding: 5px;">Finished</th><th style="text-align: right; padding: 5px;">Conv%</th></tr>';
+                        langHtml += '<tr style="border-bottom: 1px solid var(--primary);"><th style="text-align: left; padding: 5px;">Language</th><th style="text-align: right; padding: 5px;">Visits</th><th style="text-align: right; padding: 5px;">Started</th><th style="text-align: right; padding: 5px;">Finished</th><th style="text-align: right; padding: 5px;">Conv%</th></tr>';
                         data.top_languages.forEach(l => {
                             const conv = l.visits > 0 ? (l.finished / l.visits * 100).toFixed(1) : '0.0';
-                            langHtml += `<tr style="border-bottom: 1px solid rgba(255,255,255,0.1);"><td style="padding: 5px;">${escapeHtml(l.language)}</td><td style="text-align: right; padding: 5px;">${l.visits}</td><td style="text-align: right; padding: 5px;">${l.played}</td><td style="text-align: right; padding: 5px;">${l.started}</td><td style="text-align: right; padding: 5px;">${l.finished}</td><td style="text-align: right; padding: 5px;">${conv}%</td></tr>`;
+                            langHtml += `<tr style="border-bottom: 1px solid rgba(255,255,255,0.1);"><td style="padding: 5px;">${escapeHtml(l.language)}</td><td style="text-align: right; padding: 5px;">${l.visits}</td><td style="text-align: right; padding: 5px;">${l.started}</td><td style="text-align: right; padding: 5px;">${l.finished}</td><td style="text-align: right; padding: 5px;">${conv}%</td></tr>`;
                         });
                         langHtml += '</table>';
                         document.getElementById('visitLanguages').innerHTML = langHtml;
