--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -152,6 +152,9 @@
             padding: 0.15vh 0.8vw;
             border-bottom: 1px solid rgba(0, 255, 65, 0.07);
             font-size: 14px;
+            height: 2.4em;
+            line-height: 2.4em;
+            overflow: visible;
         }
         .rec-row:hover {
             background: rgba(0, 255, 65, 0.05);
