--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -176,7 +176,7 @@
             min-width: 6vw;
         }
         .rec-detail {
-            color: var(--text-dim);
+            color: #aaa;
             white-space: nowrap;
             font-size: 16px;
         }
@@ -185,6 +185,11 @@
             min-width: 12em;
             text-align: right;
             color: #aaa;
+        }
+        .rec-events {
+            min-width: 8em;
+            white-space: nowrap;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -480,11 +485,11 @@
                         <div class="rec-row">
                             <span class="rec-name">${escapeHtml(rec.username)}</span>
                             <span class="rec-score">${formatScore(rec.score)}</span>
+                            <span class="rec-events">${rec.tsunamis ? '🌊' + rec.tsunamis : ''}${rec.blackholes ? ' 🕳️' + rec.blackholes : ''}${rec.volcanoes ? ' 🌋' + rec.volcanoes : ''}${rec.strikes ? ' ⚡' + rec.strikes : ''}</span>
                             <span class="rec-detail">${rec.lines || 0}L · L${rec.level || 1}</span>
                             <span class="rec-detail">${rec.difficulty} · ${rec.skill_level}${rec.mode === 'challenge' ? ' · CH' : ''}</span>
                             <span class="rec-detail">${Math.floor(rec.duration_seconds / 60)}m${rec.duration_seconds % 60}s</span>
                             <span class="rec-detail rec-date">${new Date(rec.played_at + 'Z').toLocaleString('en-US', { timeZone: 'America/Chicago', month: 'numeric', day: 'numeric', hour: 'numeric', minute: '2-digit' })}</span>
-                            <span class="rec-detail">${rec.tsunamis ? '🌊' + rec.tsunamis : ''}${rec.blackholes ? '🕳️' + rec.blackholes : ''}${rec.volcanoes ? '🌋' + rec.volcanoes : ''}${rec.strikes ? '⚡' + rec.strikes : ''}</span>
                             <span class="post-status ${rec.player_type === 'human' ? 'status-published' : 'status-draft'}" style="font-size:9px;padding:2px 6px;">${rec.player_type.toUpperCase()}</span>
                             <button class="btn btn-primary btn-small" onclick="downloadRecording(${rec.id})" style="padding:2px 8px;font-size:9px;">JSON</button>
                             <button class="btn btn-danger btn-small" onclick="deleteRecording(${rec.id})" style="padding:2px 8px;font-size:9px;">DEL</button>
