--- a/admin/tantris/index.html
+++ b/admin/tantris/index.html
@@ -174,6 +174,7 @@
             font-family: 'Press Start 2P', cursive;
             font-size: 12px;
             min-width: 6vw;
+            text-align: right;
         }
         .rec-detail {
             color: #aaa;
