--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                 <h2 class="section-header">PLAY NOW</h2>
                 
                 <div class="games-grid">
-                    <a href="https://tantris.official-intelligence.art" class="game-card" target="_blank">
+                    <a href="https://tantro.official-intelligence.art" class="game-card" target="_blank">
                         <div class="game-card-image">
 							<img src="https://res.cloudinary.com/dzlhmwvlx/image/upload/v1764977477/BLOCKCHaiNSTO%D0%AFM_thumb_pceyvy.png" />
                             <!-- div class="placeholder">⬛</div -->
                         </div>
                         <div class="game-card-content">
-                            <h3>TaNTЯiS</h3>
+                            <h3>TANTЯO</h3>
                             <p>A revolutionary twist on the classic falling blocks game. Journey through the solar system, survive cosmic disasters, and climb the leaderboards!
 							It's like Tetris on peyote while sneezing slowly for six hours...</p>
                             <span class="status live">● LIVE</span>
